--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,1 +1,45 @@
+name: CI/CD Pipeline with Qase.io Integration
 
+# Trigger workflow pada push ke branch main atau pull request ke branch main
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+# Jobs yang akan dijalankan
+jobs:
+  run-tests:
+    runs-on: ubuntu-latest  # Menjalankan workflow di runner berbasis Ubuntu
+
+    steps:
+      # Langkah 1: Checkout kode dari repositori
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Langkah 2: Setup Python environment
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'  # Sesuaikan dengan versi Python yang Anda gunakan
+
+      # Langkah 3: Install dependencies
+      - name: Install dependencies
+        run: |
+          pip install robotframework
+          pip install qase-robotframework
+
+      # Langkah 4: Jalankan tes
+      - name: Run tests
+        run: |
+          robot --outputdir results tests.robot  # Sesuaikan dengan perintah untuk menjalankan tes Anda
+
+      # Langkah 5: Upload hasil tes ke Qase.io
+      - name: Upload results to Qase.io
+        env:
+          QASE_API_TOKEN: ${{ secrets.QASE_API_TOKEN }}  # Menggunakan secret untuk API token
+          QASE_PROJECT_CODE: ${{ secrets.QASE_PROJECT_CODE }}  # Menggunakan secret untuk project code
+        run: |
+          qase upload --code $QASE_PROJECT_CODE --results-dir results --token $QASE_API_TOKEN
