--- a/.github/workflows/ci-cd-qase.yml
+++ b/.github/workflows/ci-cd-qase.yml
@@ -24,19 +24,17 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade pip
-          pip install robotframework
-          pip install qase-robotframework
-          pip install robotframework-seleniumlibrary
+          pip install -r requirements.txt
 
       - name: Run Robot Framework tests with Qase.io
         env:
           QASE_API_TOKEN: ${{ secrets.QASE_API_TOKEN }}
-          QASE_PROJECT_CODE: "PRJCT"  # Ganti dengan kode project Qase.io
+          QASE_PROJECT_CODE: "PRJCT"  # Replace with Qase.io project code
         run: |
           if [ -d "tests" ]; then
             robot --listener qase.robotframework.Listener tests/
           else
-            echo "❌ ERROR: Folder 'tests/' tidak ditemukan!" && exit 1
+            echo "❌ ERROR: Folder 'tests/' not found!" && exit 1
           fi
 
       - name: Upload test results
