--- a/project/.github/workflows/ci-cd-qase.yml
+++ b/project/.github/workflows/ci-cd-qase.yml
@@ -21,22 +21,28 @@ jobs:
         with:
           python-version: "3.10"
 
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - name: Install dependencies
         run: |
-          pip install --upgrade pip
-          pip install robotframework
-          pip install qase-robotframework
-          pip install robotframework-seleniumlibrary
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt || (sleep 15 && pip install -r requirements.txt) || (sleep 15 && pip install -r requirements.txt)
 
       - name: Run Robot Framework tests with Qase.io
         env:
           QASE_API_TOKEN: ${{ secrets.QASE_API_TOKEN }}
-          QASE_PROJECT_CODE: "PRJCT"  # Ganti dengan kode project Qase.io
+          QASE_PROJECT_CODE: "PRJCT"  # Replace with your Qase.io project code
         run: |
           if [ -d "tests" ]; then
             robot --listener qase.robotframework.Listener tests/
           else
-            echo "❌ ERROR: Folder 'tests/' tidak ditemukan!" && exit 1
+            echo "❌ ERROR: Folder 'tests/' not found!" && exit 1
           fi
 
       - name: Upload test results
