--- a/.github/workflows/ci-cd-qase.yml
+++ b/.github/workflows/ci-cd-qase.yml
@@ -21,28 +21,20 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Cache pip
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt || (sleep 15 && pip install -r requirements.txt) || (sleep 15 && pip install -r requirements.txt)
+          pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Run Robot Framework tests with Qase.io
         env:
           QASE_API_TOKEN: ${{ secrets.QASE_API_TOKEN }}
           QASE_PROJECT_CODE: "PRJCT"  # Replace with your Qase.io project code
         run: |
-          if [ -d "tests" ]; then
-            robot --listener qase.robotframework.Listener tests/
+          if [ -d "path/to/your/tests" ]; then
+            robot --listener qase.robotframework.Listener project/tests/test-qase.robot
           else
-            echo "❌ ERROR: Folder 'tests/' not found!" && exit 1
+            echo "❌ ERROR: Folder 'project/tests/test-qase.robot' not found!" && exit 1
           fi
 
       - name: Upload test results
