--- a/.github/workflows/ci-cd-qase.yml
+++ b/.github/workflows/ci-cd-qase.yml
@@ -31,7 +31,7 @@ jobs:
           QASE_API_TOKEN: ${{ secrets.QASE_API_TOKEN }}
           QASE_PROJECT_CODE: "PRJCT"  # Replace with your Qase.io project code
         run: |
-          if [ -d "path/to/your/tests" ]; then
+          if [ -d "project/tests/test-qase.robot" ]; then
             robot --listener qase.robotframework.Listener project/tests/test-qase.robot
           else
             echo "❌ ERROR: Folder 'project/tests/test-qase.robot' not found!" && exit 1
